--- a/CSS/trainer.css
+++ b/CSS/trainer.css
@@ -108,13 +108,8 @@ box-shadow: var(--shadow);
 
 /* -------------------------------------------------------------------- */
 
-/* *{
-    box-sizing: border-box;
-    
-} */
 
 .sidebar img {
-    /* height: 60px; */
     width: 50%;
 }
 body{
@@ -124,41 +119,70 @@ body{
 #li{
     margin-top: 85%;
 }
+
+#trainerphoto{
+    width: 70%;
+    padding: 20px;
+    border-radius: 15px
+}
 #home{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* width: 70%; */
-    /* height: 100vh; */
     text-align: center;
     margin:  auto;
+    background-color: #D6E2E0;
+    /* height: 100vh; */
     /* flex-wrap: wrap; */
     /* display: none; */
     
 }
 #home1{
-    margin:50px 30px 30px 30px;
-    background-color: #00b894;
+    margin:15px 15px 15px 15px;
+    background-color: rgba(0, 184, 148,0.8);
     color: white;
-    padding: 50px;
+    padding: 10px;
     font-weight: bold;
-    font-size: 3em;
-    border-radius: 15px;
+    font-size: 2em;
+    border-radius: 10px;
+    /* font-family: cursive; */
+
 }
-.coupon {
+/* .coupon {
     border: 5px dotted #bbb;
     width: 80%;
     border-radius: 15px;
     margin: 0 auto;
-    /* max-width: 600px; */
+    max-width: 600px;
     margin-top: 30px;
-}
+} */
 .neeews{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 90%;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
 }
+.card {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.4);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    margin-top: 3%;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px; 
+    min-height: 220px;
+    }
+.card h2 {
+    margin: 10px 20px;
+    background-color: rgba(0, 184, 148,0.8);
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+    }
 .containerHome {
     padding: 2px 16px;
     background-color: #f1f1f1;
@@ -332,6 +356,7 @@ table th,caption{
     font-weight: bold;
     text-align: center;
     padding: 12px 15px;
+    
 
 }
 table caption{
@@ -406,7 +431,21 @@ table button:hover{
     left: 50%;
     padding: 30px;
     width: 300px;
-    height: 240px;
+    height: 140px;
+    border-radius: 8px;
+    background-color: #00b894;
+    visibility: hidden;
+}
+
+#studdeleted{
+    text-align: center;
+    z-index: 3;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    padding: 30px;
+    width: 300px;
+    height: 140px;
     border-radius: 8px;
     background-color: #00b894;
     visibility: hidden;
@@ -424,6 +463,29 @@ table button:hover{
     border-radius: 8px;
     background-color: #00b894;
     visibility: hidden;
+}
+
+#deletcard{
+    text-align: center;
+    z-index: 3;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    padding: 30px;
+    width: 180px;
+    height: 80px;
+    border-radius: 8px;
+    background-color: #00b894;
+    color: white;
+    visibility: hidden;
+}
+
+#deletcard button{
+    font-size: 12px;
+    margin-top: 15%;
+    margin-right: 3%;
+    height: 35%;
+    width: 30%;
 }
 
 .studinput{
@@ -479,6 +541,17 @@ table button:hover{
     display: none;
 }
 
+#attedit{
+    width: 25px;
+    display: none;
+}
+
+.tarinerphoto{
+    background-color: white;
+    margin: 30px;
+    border-radius: 10px;
+
+}
 tr:hover {background-color: rgba(0, 184, 148,0.5);}
 table tbody tr:nth-of-type(odd):hover{background-color:rgba(0, 184, 148,0.5);}
 
