--- a/CSS/trainer.css
+++ b/CSS/trainer.css
@@ -550,6 +550,8 @@ table button:hover{
     background-color: white;
     margin: 30px;
     border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
 
 }
 tr:hover {background-color: rgba(0, 184, 148,0.5);}
